cluster/guacamole/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: guacamole-middleware-prefix
  namespace: guacamole
spec:
  addprefix:
    prefix: "/guacamole"
