cluster/guacamole/deployment-guacamole.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guacamole-deployment
  namespace: guacamole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: guacamole
  template:
    metadata:
      labels:
        app: guacamole
    spec:
      nodeSelector:
        role: apps
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - env:
            - name: POSTGRESQL_HOSTNAME
              value: guacamole-postgresql-service.guacamole.svc.cluster.local
            - name: OPENID_ENABLED
              value: "true"
            - name: OPENID_AUTHORIZATION_ENDPOINT
              value: https://authentik.nathanv.app/application/o/authorize/
            - name: OPENID_ISSUER
              value: https://authentik.nathanv.app/application/o/guacamole/
            - name: OPENID_JWKS_ENDPOINT
              value: https://authentik.nathanv.app/application/o/guacamole/jwks/
            - name: OPENID_REDIRECT_URI
              value: https://guacamole.nathanv.app/
            - name: OPENID_USERNAME_CLAIM_TYPE
              value: preferred_username
            - name: GUACD_HOSTNAME
              value: guacamole-guacd-service.guacamole.svc.cluster.local
            - name: EXTENSION_PRIORITY
              value: openid
              # only set this for first time
              # value: "*, openid"
          image: cr.nathanv.app/docker.io/guacamole/guacamole:1.6.0
          name: guacamole
          ports:
            - containerPort: 8080
