cluster/guacamole/deployment-postgresql.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: guacamole-postgresql-deployment
  namespace: guacamole
spec:
  replicas: 1
  serviceName: guacamole-postgresql
  selector:
    matchLabels:
      app: guacamole-postgresql
  template:
    metadata:
      labels:
        app: guacamole-postgresql
    spec:
      nodeSelector:
        role: apps
      # initContainers:
      #   - name: schema-gen
      #     # registry-proxy image-prefix
      #     image: cr.nathanv.app/docker.io/guacamole/guacamole:1.6.0
      #     securityContext:
      #       runAsUser: 0 # required for script to work
      #     command: ['/bin/bash', '-c']
      #     args: ['/opt/guacamole/bin/initdb.sh --postgresql > /docker-entrypoint-initdb.d/initdb.sql']
      #     volumeMounts:
      #       - mountPath: /docker-entrypoint-initdb.d
      #         name: initdb-vol
      #         # Some versions of guacamole have a pre-upgrade script that needs to be run.
      #         # If database is already initialized, it will not be automatic.
      #         # This block below does help with copying the .sql file into the postgres container for exection.
      #         # https://guacamole.apache.org/doc/1.6.0/gug/postgresql-auth.html#granting-guacamole-access-to-the-database
      #         # - name: upgrade
      #         #   # registry-proxy image-prefix
      #         #   image: cr.nathanv.app/docker.io/guacamole/guacamole:1.6.0
      #         #   securityContext:
      #         #     runAsUser: 0 # required for script to work
      #         #   command: ['/bin/bash', '-c']
      #         #   args: ['cp /opt/guacamole/extensions/guacamole-auth-jdbc/postgresql/schema/upgrade/upgrade-pre-1.6.0.sql /docker-entrypoint-initdb.d/upgrade-pre-1.6.0.sql']
      #         #   volumeMounts:
      #         #     - mountPath: /docker-entrypoint-initdb.d
      #         #       name: initdb-vol
      containers:
        - envFrom:
            - secretRef:
                name: postgres-env
          # registry-proxy image-prefix
          image: cr.nathanv.app/docker.io/library/postgres:18.6
          name: postgresql
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/
              name: postgresql-vol
            - mountPath: /docker-entrypoint-initdb.d
              name: initdb-vol
      volumes:
        - name: postgresql-vol
          persistentVolumeClaim:
            claimName: guacamole-pvc-postgresql
        - name: initdb-vol
          persistentVolumeClaim:
            claimName: guacamole-pvc-initdb
