cluster/guacamole/service-guacamole.yaml
apiVersion: v1
kind: Service
metadata:
  name: guacamole-service
  namespace: guacamole
spec:
  type: ClusterIP
  selector:
    app: guacamole
  ports:
    - port: 8080
      protocol: TCP
