cluster/guacamole/service-guacd.yaml
apiVersion: v1
kind: Service
metadata:
  name: guacamole-guacd-service
  namespace: guacamole
spec:
  type: ClusterIP
  selector:
    app: guacamole-guacd
  ports:
    - port: 4822
      protocol: TCP
