cluster/guacamole/service-postgresql.yaml
apiVersion: v1
kind: Service
metadata:
  name: guacamole-postgresql-service
  namespace: guacamole
spec:
  type: ClusterIP
  selector:
    app: guacamole-postgresql
  ports:
    - port: 5432
      protocol: TCP
