cluster/guacamole/network-policy-1.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: guacd-network-policy-1
  namespace: guacamole
spec:
  podSelector:
    matchLabels:
      app: guacamole-guacd
  policyTypes:
    - Ingress
    - Egress
  # only permit ingress/egress from guacamole frontend
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: guacamole
      ports:
        - protocol: TCP
          port: 4822
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: guacamole
      ports:
        - protocol: TCP
          port: 4822
